# protogen-mlir-v2

./: .gitignore  .gitmodules  CMakeLists.txt  ProtoCC.g4  README.md
.github/workflows/: build-and-test.yml
cmake/modules/: AddPROTOGEN.cmake  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in
include/: CMakeLists.txt
include/FSM/: CMakeLists.txt  FSM.td  FSMDialect.h  FSMOps.h  FSMOps.td  FSMTypes.h  FSMTypes.td  FSMUtils.h
include/FSM/Passes/: CMakeLists.txt  Passes.h  Passes.td
include/PCC/: CMakeLists.txt  PCC.td  PCCAttributes.h  PCCAttributes.td  PCCDialect.h  PCCDialect.td  PCCOps.h  PCCOps.td  PCCTypes.h  PCCTypes.td
include/PCC/Passes/: CMakeLists.txt  Passes.h  Passes.td  Patterns.td
include/Support/: InitAllDialects.h  LLVM.h
include/mlir-gen/: mlirGen.h
include/translation/murphi/: InjaEnvSingleton.h  MurphiCodeGen.h  MurphiTemplateCodeGen.h  Translate.h  TranslatePCCToMurphi.h
include/translation/murphi/codegen/: Boilerplate.h  FSMDialectInterpreter.h  FSMOperationConverter.h  InjaEnvSingleton.h  MurphiCodeGen.h  MurphiConstants.h  MurphiStructs.h
include/translation/utils/: JSONValidation.h  ModuleInterpreter.h  murphi-utils.h  utils.h
json_schema/: const_decl.json  enum_type.json  murphi_type.json  murphi_type_id.json  type_decl.json  type_description.json
lib/: CMakeLists.txt
lib/FSM/: CMakeLists.txt  FSMDialect.cpp  FSMOps.cpp  FSMTypes.cpp  FSMUtils.cpp
lib/FSM/Passes/: CMakeLists.txt  FullOptPipeline.cpp  NonStallingOptimizationPass.cpp  PassDetail.h  PassRegistration.cpp  ProtoGenRewriter.h  RemoveAwaitPass.cpp  StallingOptimizationPass.cpp
lib/PCC/: CMakeLists.txt  PCCAttributes.cpp  PCCDialect.cpp  PCCOps.cpp  PCCTypes.cpp
lib/PCC/Passes/: CMakeLists.txt  EndStatesPass.cpp  MutexOpsPass.cpp  PassDetail.h  PassRegistration.cpp  StableCompilationPipeline.cpp  StallingCompilationPipeline.cpp  StallingProtogenPass.cpp  TransientStatesPass.cpp
lib/mlir-gen/: CMakeLists.txt  fsmMlirGen.cpp  mlirGen.cpp
lib/translation/: CMakeLists.txt
lib/translation/murphi/: CMakeLists.txt  FSMTranslate.cpp  InjaEnvSingleton.cpp  MurphiCodeGen.cpp  MurphiTemplateCodeGen.cpp  PCCTranslate.cpp  Translate.cpp  TranslatePCCToMurphi.cpp
lib/translation/murphi/codegen/: Boilerplate.cpp  FSMDialectInterpreter.cpp  FSMOperationConverter.cpp  InjaEnvSingleton.cpp  MurphiCodeGen.cpp  MurphiConstants.cpp  MurphiStructs.cpp
lib/translation/utils/: CMakeLists.txt  JSONValidation.cpp  ModuleInterpreter.cpp  Utils.cpp  murphi-utils.cpp  utils.cpp
murphi/: MOSI.m
pcc-translate/: CMakeLists.txt  TranslatePCCToMLIR.cpp  TranslatePCCToMLIR.h  pcc-translate.cpp
protocols/: MESI.pcc  MI.pcc  MSI.pcc  tinyMI.pcc
protocols/translated-protocols/: MI.mlir  translate-protocol.sh
protocols/translated-protocols/FSM/: basic.mlir
sample-mlir/: block-based-dialect.mlir  fsm.mlir  m-trans.mlir  mi-fsm.mlir  msi-fsm.mlir  msi-opt.mlir  msi-stable.mlir  stalling-optimization-test-input.mlir  tinyMI.mlir  translated-MI.mlir  type-parsing-test.mlir
templates/: alias_rule.tmpl  array_type.tmpl  case.tmpl  choose_rule.tmpl  comment.tmpl  const_decl.tmpl  enum_type.tmpl  expression.tmpl  for_stmt.tmpl  forall.tmpl  formal_params.tmpl  forward_decl.tmpl  function_decl.tmpl  if_stmt.tmpl  index.tmpl  invariant.tmpl  message_constructor.tmpl  multiset_type.tmpl  murphi_base.tmpl  proc_decl.tmpl  procedure_decl.tmpl  quantifier.tmpl  record_type.tmpl  rule.tmpl  ruleset.tmpl  scalarset_type.tmpl  simple_rule.tmpl  start_state.tmpl  statement.tmpl  sub_range_type.tmpl  switch.tmpl  type_decl.tmpl  type_expr.tmpl  union_type.tmpl  var_decl.tmpl
test/: CMakeLists.txt  CodeGenTests.cpp  InjaTests.cpp  MurphiTemplatesTest.cpp  ValiJSONTests.cpp  valijson_test_doc.json
test/FSM_Dialect/: OpConstructionTests.cpp  OpHelper.h  OpTypeTests.cpp  UtilitiesTests.cpp  fixtures.h
test/codegen/: ArrayTypeTests.cpp  ConstDeclTemplateTests.cpp  EnumTypeTests.cpp  ExpressionTests.cpp  FormalParamsTests.cpp  FunctionDeclTests.cpp  InjaEnvSingletonTests.cpp  MachineHandlerTests.cpp  MessageConstructorTemplateTests.cpp  QuantifierTests.cpp  RuleTests.cpp  StatementTests.cpp  SubRangeTests.cpp  TypeDeclTemplateTests.cpp
test/misc/: NestedStructureTests.cpp  TranslateUtilsTest.cpp
test/mlirGen/: mlirGenTest.cpp
test/murphi-translate/: FSMDialectInterpreterTests.cpp  ModuleInterpreterTests.cpp  MurphiAssemblerTests.cpp  MurphiCodeGenTests.cpp  MurphiTranslateTests.cpp
tools/: CMakeLists.txt
tools/fsm-opt/: CMakeLists.txt  fsm-opt.cpp
tools/murphi-translate/: CMakeLists.txt  murphi-translate.cpp
tools/pcc-opt/: CMakeLists.txt  pcc-opt.cpp
tools/pcc-translate/: CMakeLists.txt  RegisterPCCTranslations.cpp  RegisterPCCTranslations.h  TranslatePCCToMLIR.cpp  pcc-translate.cpp
tools/protogen-opt/: CMakeLists.txt  protogen-opt.cpp
utils/: generate_schemas.sh  murphi_json_schema.ts
utils/generated_json_schemas/: gen_CaseStmt.json  gen_ConstDecl.json  gen_Designator.json  gen_ExpressionDescription.json  gen_Formal.json  gen_MurphiType.json  gen_Murphi_json_schema.json  gen_NegExpr.json  gen_ProcDecl.json  gen_ProcDef.json  gen_Quantifier.json  gen_RuleDescription.json  gen_StatementDescription.json  gen_TypeDecl.json  gen_TypeDescription.json
